Added physics page

--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ minima:
 # this and add the path to the pages in order as they should show up
 header_pages:
   - Villisika.md
-  - palloja.md
+  - PhysicsEng.md
   - Puita.md
   - Ukkoja.md
   - Alasiikalampi.md
