--- a/_config.yml
+++ b/_config.yml
@@ -78,12 +78,13 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 header_pages:
-  - Villisika.md
+#  - Villisika.md
   - PhysicsEng.md
   - Puita.md
   - Ukkoja.md
   - Alasiikalampi.md
   - Purkkeja.md
+  - Aaltoja.md
 
 # Fix into github Authentication error: "GitHub Metadata: No GitHub API authentication could be found."
 github: [metadata]
